cmake_minimum_required(VERSION 3.1.0)
project(basis)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_EXTENSIONS OFF)
add_library(bfs BFS.cpp)
add_executable(tt test.cpp)
target_link_libraries(tt bfs)
add_library(dfs DFS.cpp)
target_link_libraries(tt dfs)
add_library(topo_sort topological_sort.cpp)
target_link_libraries(topo_sort dfs)
target_link_libraries(tt topo_sort)
# add_library(scc SCC.cpp)
# target_link_libraries(tt scc)
add_library(skeleton skeleton.cpp)
target_link_libraries(tt skeleton)